import("//build/ohos.gni")

ohos_shared_library("rosen_context") {
  sources = [
    "ohos_context_i.cpp",
    "raw_context.cpp",
    "rosen_context_impl.cpp",
  ]
  include_dirs = [
    "//foundation/graphic/graphic_2d/rosen/modules/render_service_base/src",
    "//foundation/graphic/graphic_2d/rosen/include",
    "//drivers/peripheral/display/interfaces/include",
    "//foundation/multimedia/image_standard/interfaces/innerkits/include",
    "//foundation/graphic/graphic_2d/rosen/modules/render_service_base/src/platform/ohos",
    "//foundation/graphic/graphic_2d/interfaces/innerkits/surface",
  ]

  deps = [
    "//commonlibrary/c_utils/base:utils",
    "//foundation/graphic/graphic_2d/rosen/modules/render_service_client:librender_service_client",
  ]
  part_name = "graphic_2d"
  subsystem_name = "graphic"
}

ohos_shared_library("vk_app_context") {
  sources = [
    "ohos_context_i_app.cpp",
  ]
  #include_dirs = [
  #  "//foundation/graphic/graphic_2d/rosen/modules/render_service_base/src",
  #  "//foundation/graphic/graphic_2d/rosen/include",
  #  "//drivers/peripheral/display/interfaces/include",
  #  "//foundation/multimedia/image_standard/interfaces/innerkits/include",
  #  "//foundation/graphic/graphic_2d/rosen/modules/render_service_base/src/platform/ohos",
  #  "//foundation/graphic/graphic_2d/interfaces/innerkits/surface",
  #]

  deps = [
    #"//commonlibrary/c_utils/base:utils",
    #"//foundation/graphic/graphic_2d/rosen/modules/render_service_client:librender_service_client",
  ]
  part_name = "graphic_2d"
  subsystem_name = "graphic"
}
